--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif; color:red ; "> TIC-TAC-TOE </h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
